--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description" content="El Concesionario mejor calificado Buenos Aires, aca podras encontrar diversas marcas y modelos al mejor precio, solo en AUTOMOTORES CARSUALES">
+    <meta name="keywords" content="Concesionario, Autos, Ford, Peugeot, Chevrolet, Fiat, Concesionarios en Buenos Aires, Baratos, Autos baratos en Buenos Aires, Argentina, Mercado">
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
